# alicloud-oss-drop

./: .env.example  .gitignore  README.md  config-store.js  package-lock.json  package.json  server.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
tauri-ui/: index.html
